# libkss_conversion_tools

./: .gitignore  .gitmodules  CMakeLists.txt  KSSPLAYER.md  MERGING_ENGINES_LESSONS.md  README.md  run.sh  run_f1play.sh  run_nem3play.sh  sngpro-all.kss
cmake/: apply_libkss_patch.cmake
docs/: KSPPLAYER.md  KSSPLAYER.md  README.md  README_BASICKSS.md  README_KSPPLAY.md  README_NEM3PLAY.md  dmv-inventory.md  konami-kss-conversion-playbook.md  ksp-format.md  mbwave-engine-abi.md  plan.md
dutch_moonsound_veterans/: DMV1.dsk  DMV2.dsk  DMV3.dsk
dutch_moonsound_veterans/ksp/: DMV_5_music.rom  DMV_5_music.rom.txt
dutch_moonsound_veterans/ksp/DMV1/: ALMOSEND.ksp  ANGEL_01.ksp  ANGEL_01_compressed.ksp  ANGEL_06.ksp  ANGEL_06_compressed.ksp  ANGEL_09.ksp  ANGEL_09_compressed.ksp  CLIMAX.ksp  CLIMAX_compressed.ksp  CRYSISTE.ksp  DIFFMOVE.ksp  DREAMS.ksp  ENDING.ksp  FLYING01.ksp  FLYING02.ksp  FLYING03.ksp  FLYING09.ksp  FLYING13.ksp  HERTFIRE.ksp  ILLUCITY.ksp  INTRO3.ksp  LOST.ksp  MELAHERO.ksp  PROLOG4.ksp  REARVIEW.ksp  RESIST.ksp  SKYLINE.ksp  SLINTRO.ksp  SLSTAGE1.ksp  SUNDAY.ksp  THESMOKE.ksp  TOWERDEL.ksp  USAS.ksp  WALKEDGE.ksp  WICKCHLD.ksp  WITS.ksp  WOLVES.ksp  YS2BATTL.ksp  YS4LAVA.ksp
dutch_moonsound_veterans/ksp/DMV2/: ALLPART2.ksp  BLESSING.ksp  BONUS.ksp  CARELESS.ksp  CRAZY.ksp  DEFBEACH.ksp  FANTASY.ksp  FAREWELL.ksp  GRACE.ksp  GROUCHO.ksp  HELLDEL.ksp  HOUSIE.ksp  (+23 more)
include/ksp/: engine.h  ksp.h  mbwave.h
ksp/: Magical_Chase_PC_Engine_SCCplus_chunked_compressed.ksp  Parodius_Da_PC_Engine_SCCplus_compressed.ksp
ksp/Bomberman_94_PC_Engine_SCCplus_chunked_compressed_bundle/: Bomberman_94_PC_Engine_SCCplus_chunked_compressed.ksp  Bomberman_94_PC_Engine_SCCplus_chunked_compressed_README.md  Bomberman_94_PC_Engine_SCCplus_chunked_compressed_validation.json  Bomberman_94_PC_Engine_SCCplus_chunked_prototype.json  Bomberman_94_PC_Engine_SCCplus_chunked_prototype.ksp  README.md  bomberman94_convert.py  build_bomberman94_chunked.py  container_validation.json  convert_sccplus_kcpx_to_kcpz.py  engine_map.json  hes_hook_buffered.c  pages.csv  tracks.csv  validate_chunked_engine.py  z80_validation.json
ksp/Magical_Chase_PC_Engine_SCCplus_chunked_compressed_bundle/: Magical_Chase_PC_Engine_SCCplus_chunked_compressed_README.md  Magical_Chase_PC_Engine_SCCplus_chunked_compressed_validation.json  Magical_Chase_PC_Engine_SCCplus_chunked_prototype.json  Magical_Chase_PC_Engine_SCCplus_chunked_prototype.ksp  README.md  analyze_channel_usage.py  build_magical_chase_chunked.py  channel_usage.csv  container_validation.json  engine_map.json  kspplayer_chunked_sccplus.patch  kspplayer_chunked_sccplus_kcpz.patch  magical_chase_convert.py  pages.csv  tracks.csv  validate_chunked_engine.py  z80_validation.json
ksp/Parodius_Da_PC_Engine_SCCplus_compressed_bundle/: Parodius_Da_PC_Engine_SCCplus_compressed_README.md  Parodius_Da_PC_Engine_SCCplus_compressed_validation.json  Parodius_Da_PC_Engine_SCCplus_prototype.json  Parodius_Da_PC_Engine_SCCplus_prototype.ksp  README.md  build_ksp_final.py  container_validation.json  convert_sccplus_kcpx_to_kcpz.py  engine_map.json  hes_hook_libgme_0.6.3.c  hes_trace_fast.c  kspplayer_sccplus_silence.patch  parodius_convert.py  tracks.csv  validate_z80_engine.py  z80_validation.json
ksp/haunted_castle_msx_complete_page_package/: README.md  build_haunted_castle_full_ksp_v2.py  build_haunted_castle_msx_complete_pages.py  haunted_castle_msx_complete_page.ksp  haunted_castle_msx_complete_page_validation.json  haunted_castle_recursive_disassembly.txt
msx/: ALMOSEND.KSP  ALMOSEND.PFX  AUTOEXEC.BAK  AUTOEXEC.BAS  BASICKSS.BAS  BASICKSS.asm  CONTRA.KSP  F1PLAY.asm  F1SPIRIT.KSP  INTRO1.PFX  KINGVAL2.KSP  KNIGHTMR.KSP  KSPDOS2.asm  KSPMWK.asm  KSPPLAY.BAS  KSPPLAY.COM  KSPPLAY.asm  KSPPLAYER.asm  KSPPLAYR.BAS  KSPPLAYR.asm  KSSDOS2.COM  KSSDOS2.asm  KSSPLAY.COM  KSSPLAYS.BAS  KSSPLAYS.asm  MWMSWITCH.KSP  NEM3PLAY.asm  NEMESIS2.KSP  NEMESIS3.KSS  PARODIUS.KSP  PLAYER_LAYOUT.inc  QUARTH.KSS  README_BASICKSS.md  README_KSSDOS2.md  SALAMAND.KSP  SDSNATC.KSP  SNATCHER.KSP  SOLIDSNK.KSP  SPACEMAN.KSP  debug_selector.tcl  (+16 more)
msx_debug_tcl/: debug_selector.tcl  f1_audio_trace.tcl  f1_scc_trace.tcl  f1_state_dump.tcl  nem3_audio_trace.tcl  nem3_memory_dump.tcl  nem3_runtime_trace.tcl  run_complete_page_regression.tcl  run_ctrlc_test.tcl  run_exit_test.tcl  run_kssplay.tcl  run_quarth_kss.tcl  run_salamander_kss.tcl  trace_entry.tcl  trace_kss.tcl
openmsx_debug/: README.md  openmsx_trace.tcl  run_openmsx_trace.sh
patches/: libkss-moonsound.patch  libkss-moonsound.patch.md
src/: ZX_LICENSES.md  kspplayer.c  kss2wav_moonsound.c  kssplayer.c  moonsound_opl4.c  moonsound_opl4.h  pro2kss.c  pro_tracker_converter.c  pro_tracker_converter.h  pro_tracker_player.h  sng2kss.c  sng2kss_converter.c  sng2kss_converter.h  sngpro2kss.c  sngpro2kss_converter.c  sngpro2kss_converter.h  vigamup2kss.c  vigamup2rom.c  zx_compressor.c  zx_compressor.h  zx_decompressor.c  zx_decompressor.h  zx_decompressors.h
src/ksp/: engine.c  ksp.c  mbwave.c
src/zx0/: compress.c  memory.c  optimize.c  zx0.h
tests/: ksp_selftest.c  test_multi_mwm_switch.py  test_mwk_support.py
tools/: build_f1spirit_16kb_max_compressed.py  build_konami_banked_complete_pages.py  build_konami_complete_pages.py  build_msx_basickss.py  build_msx_dos2_ksp.py  build_msx_dos2_kss.py  build_msx_f1spirit_player.py  build_msx_nemesis3_player.py  build_msx_player.py  build_msx_rom_player.py  build_msx_rom_selector.py  build_nemesis3_16kb_max_compressed.py  build_quarth_16k_complete_page.py  build_quarth_16k_complete_page_compressed.py  build_quarth_16kb_max_compressed.py  build_salamander_complete_page.py  build_salamander_complete_page_compressed.py  build_snatcher_complete_page.py  convert_specialized_complete_pages_to_kcp.py  dmv_fix.txt  dmv_mwm_to_ksp.py  extract_kss_assets.py  kspack.c  kspmaterialize.c  kspvalidate.c  kss_track_analyzer.c  kss_write_compare.c  mbwave2ksp.c  mbwave_extract.c  mwk_usage.py  patch_f1spirit_16k.py  patch_nemesis3_16k.py  repack_quarth_banked.py  tmp_vm_dump.c  zx0check.c  zx0pack.c
(+289 files in other folders)
